Giraph Change Log

Release 0.2.0 - unreleased
  GIRAPH-522: JMap Dumper (nitay)

  GIRAPH-517: Use stable hcatalog 0.5.0-incubating (nitay)

  GIRAPH-503: Refactor platform-independent CLI argument parsing in GiraphRunner into a separate class (ereisman)

  GIRAPH-519: EdgeFactory (nitay)

  GIRAPH-515: More efficient and flexible edge-based input (apresta)

  GIRAPH-516: out-of-core messages dies for ArrayIndexOutOfBoundsException when 
  running out-of-core messages in UnsafeByteArrayOutputStream (majakabiljo)

  GIRAPH-513: OnDiskPartitionStore should take advantage of multiple disks (claudio)

  GIRAPH-511: DNS interface and nameserver for multi-interface machines (claudio)

  GIRAPH-470 (tavoaqp via nitay)

  GIRAPH-504: Create PartitionContext (majakabiljo)

  GIRAPH-499: Giraph should not reserve minimum reduce slot memory 1024 since we never use it (ereisman)

  GIRAPH-508: Increase the limit on the number of partitions (majakabiljo)

  GIRAPH-509: Factor out AggregatorUsage (majakabiljo)

  GIRAPH-505: Metrics Updates (nitay)

  GIRAPH-506: Concurrency issue - response can arrive before request is added to the outstanding map (majakabiljo)

  GIRAPH-501: WorkerObserver (nitay)

  GIRAPH-502: In PageRankBenchmark, remove unneeded handling of -t 2 (ekoontz)

  GIRAPH-500: Refactor job launch code out of graph package and into job package (ereisman)

  GIRAPH-493: Remove EdgeWithSource (nitay)

  GIRAPH-429: Number of input split threads set to 1 less than necessary (majakabiljo)
  
  GIRAPH-498: We should check input splits status from zookeeeper once per worker, 
  not once per split thread (majakabiljo)

  GIRAPH-497: Limiting number of open requests doesn't work with multithreading (majakabiljo via ereisman)

  GIRAPH-461: Convert static assignment of in-memory partitions with LRU cache (claudio)

  GIRAPH-494: Make Edge an interface (nitay)

  GIRAPH-492: Saving vertices has no status report, making it hard to 
  find DFS issues (aching)
